# MyCloneTerarria

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/workflows/: build.yml  bump-version.yml  release.yml
headers/: App.h  Camera.h  GameTime.h  PhysicsSystem.h  World.h  player.h
scripts/: build-deps.ps1  build-deps.sh  dev.ps1  dev.sh  setup.ps1
src/: App.cpp  Background.cpp  Background.h  Camera.cpp  GameTime.cpp  InputManager.cpp  InputManager.h  PhysicsBody.h  PhysicsSystem.cpp  TextureManager.h  Time.cpp  Transform.h  Vector2.h  World.cpp  config.h  player.cpp  player.h
